Added my personal reflections

--- a/documentation/documentation.tex
+++ b/documentation/documentation.tex
@@ -211,7 +211,15 @@ links to be anything if the administrator desires.
 \subsubsection{Dan Freedman}
 \textit{Add personal reflections here}
 \subsubsection{Stoyan Gaydarov}
-\textit{Add personal reflections here}
+I have been apart of Conference since I transfered into U of I and both years
+we had to touch the database manually to get some of the information out of it.
+This was not acceptable and when jim suggested this as our 428 project I was
+really excited. I think that having our online ticket management helped with
+keeping track of all the things that had to be done, and how far along things were.
+I will be around next year when we are using this for the actual conference. I know
+all the documentation we have done and all the tests we created are going to be
+very helpful when we are trying to work with the system. Overall I am glad there
+won't be any manual sql queries to remember to check how many volunteers we have.
 \subsubsection{Simo Leone}
 \textit{Add personal reflections here}
 \subsubsection{Dave Paola}
