Dan's personal reflection done

--- a/documentation/documentation.tex
+++ b/documentation/documentation.tex
@@ -219,7 +219,15 @@ links to be anything if the administrator desires.
 \subsubsection{Eric Dyoniziak}
 \textit{Add personal reflections here}
 \subsubsection{Dan Freedman}
-\textit{Add personal reflections here}
+This project was quite an enlightening experience into the world of software engineering.
+For the first time, I've had to work on a software project with more than just 2 or 3 people,
+which was really a new experience. It made me realize how important constant communication
+is to such a large project, and just how important a ticket management system is. I don't think
+we would have gotten very far without Redmine, with its ability to do ticket modification from
+Git commit messages. I've also learned from this project just how much better git is than svn,
+and the ability to make quick and easy branches to test new functionality without breaking the master.
+Git enabled us as a team to work more effectively, with powerful merge tools and greater per file controls.
+I do not think that this project would have been as successful as it was if we were using svn.
 \subsubsection{Stoyan Gaydarov}
 I have been apart of Conference since I transfered into U of I and both years
 we had to touch the database manually to get some of the information out of it.
