Added personal reflection

--- a/documentation/documentation.tex
+++ b/documentation/documentation.tex
@@ -231,7 +231,24 @@ all the documentation we have done and all the tests we created are going to be
 very helpful when we are trying to work with the system. Overall I am glad there
 won't be any manual sql queries to remember to check how many volunteers we have.
 \subsubsection{Simo Leone}
-\textit{Add personal reflections here}
+I've learned a lot while working on ConferenceWare. Before this project, and
+being sort of a FOSS junkie myself, I had little or no experience with
+C\#, ASP.NET, MSSQL, or even Visual Studio. Throughout the course of the project,
+I learned all about partial classes in C\#, the garbled mess which is ASP syntax,
+and the terrifying world of MSI installers. These technologies are in many cases
+direct analogues to others which I was quite familiar with, which gave me a
+whole new perspective on the usual web software stack. I'm glad to have had this
+experience, since I feel that it makes me a more well-rounded and versatile
+programmer, no matter what technology I may be working with in the future. In
+addition, the project gave me an opportunity to work through a full project
+with a team using development processes which I haven't had a lot of exposure
+to before. While I do have some real-world experience, I can't say I've ever
+had an excuse to make UML diagrams and proper use-case diagrams before. I
+think this experience will be a great help in the future if I'm ever designing
+something from scratch, since I'll have some exposure to software development
+processes useful during the early stages of the software lifecycle. All in all,
+I've greatly enjoyed working on ConferenceWare, and think the experience will
+be quite beneficial in the future.
 \subsubsection{Dave Paola}
 \textit{Add personal reflections here}
 \subsubsection{Brian Sawicki}
