added my personal reflection

--- a/documentation/documentation.tex
+++ b/documentation/documentation.tex
@@ -217,7 +217,16 @@ links to be anything if the administrator desires.
 %%TODO:fix these
 \subsection{Personal Reflections}
 \subsubsection{Eric Dyoniziak}
-\textit{Add personal reflections here}
+Overall, I found this project a great learning experience.  I have done previous web
+development work but never using so many frameworks and tools.  I was amazed at how much
+convience these tools provide, inparticular LINQ and the ASP.NET MVC Framework. Despite 
+having learning curves they made development rather straightforward. Another valuable
+experience was working with such a large group.  It put a realistic feel to the project
+considering most software is developed in large groups and it had its own challenges to
+learn from. This project also provided good exposure to software engineering techniques
+used for starting up projects including requirements, design, architecture and teamwork.
+All in all I'm very satisfied with my experience and I think as a group we succeeded in
+creating a wonderful product. 
 \subsubsection{Dan Freedman}
 This project was quite an enlightening experience into the world of software engineering.
 For the first time, I've had to work on a software project with more than just 2 or 3 people,
