--- a/documentation/documentation.tex
+++ b/documentation/documentation.tex
@@ -269,7 +269,7 @@ be quite beneficial in the future.
 \subsubsection{Dave Paola}
 \textit{Add personal reflections here}
 \subsubsection{Brian Sawicki}
-Working on this project was very different than my previous software engineering experience.  While in my internships the previous two summers I have worked on teams of comparable size, this was my first time developing a serious application in an entirely windows environment, meaning there were a lot of technologies being used that I was unfamiliar with.  I came in with only minor web development experience, as much of my prior work is in distributed systems, and I'm several years removed from the experience I do have.  This was also only the second time I had ever developed anything using C# as the primary language.  All this combined made working on this project a real learning experience for me, full of new and sometimes frustrating problems to solve.  Despite my internship experience had never had to do a lot of the things we needed to do for this project.  For instance, while I have written plenty of unit tests before, I had never been forced to write tests for anything using the MVC pattern before.  Thankfully many of the members of the team were quite knowledgeable and able to give me a hand with any technical problems I ran into.  In the end I feel it has been a very beneficial project to work on, and I have enjoyed watching as our final product took shape over time. In the end I don't feel like I will probably be doing a lot of windows based web development in the future, however having used the XP process while working on the project (in particular the documentation work we did and the use of the redmine reporting system for bugs/users stories/etc) will almost certainly be invaluable after I graduate and join the workforce.
+Working on this project was very different than my previous software engineering experience.  While in my internships the previous two summers I have worked on teams of comparable size, this was my first time developing a serious application in an entirely windows environment, meaning there were a lot of technologies being used that I was unfamiliar with.  I came in with only minor web development experience, as much of my prior work is in distributed systems, and I'm several years removed from the experience I do have.  This was also only the second time I had ever developed anything using C\# as the primary language.  All this combined made working on this project a real learning experience for me, full of new and sometimes frustrating problems to solve.  Despite my internship experience had never had to do a lot of the things we needed to do for this project.  For instance, while I have written plenty of unit tests before, I had never been forced to write tests for anything using the MVC pattern before.  Thankfully many of the members of the team were quite knowledgeable and able to give me a hand with any technical problems I ran into.  In the end I feel it has been a very beneficial project to work on, and I have enjoyed watching as our final product took shape over time. In the end I don't feel like I will probably be doing a lot of windows based web development in the future, however having used the XP process while working on the project (in particular the documentation work we did and the use of the redmine reporting system for bugs/users stories/etc) will almost certainly be invaluable after I graduate and join the workforce.
 \subsubsection{Nick Tenczar}
 \textit{Add personal reflections here}
 \subsubsection{Jim Wordelman}
