added my reflection

--- a/documentation/documentation.tex
+++ b/documentation/documentation.tex
@@ -267,7 +267,7 @@ processes useful during the early stages of the software lifecycle. All in all,
 I've greatly enjoyed working on ConferenceWare, and think the experience will
 be quite beneficial in the future.
 \subsubsection{Dave Paola}
-\textit{Add personal reflections here}
+Conferenceware provided a very unique and educational experience personally and professionally.  While I've had experience using Microsoft developer tools and languages in the past, the experience was quite limited and outdated.  This project gave me both a great overview and a vast depth of understanding into technologies like Microsoft's MVC framework, C\#, and Visual Studio in general.  Using git within the context of numerous developers also hardened my habits pertaining to breaking the build and allowed me to build my skills with git.  The Conferenceware environment was also quite different from any previous experience in software development methodogieis.  I always figured pair programming was stupid, but I cannot count the number of times it saved me from serious bugs and errors in my code.  Another area Conferenceware was a learning experience was in testing.  I've never written unit tests before, aside from school projects.  The tests we wrote for Conferenceware will be used in a production environment to ensure code quality, and I was completely new to unit testing and functional testing.  This is a skill that will serve me for many years to come.  Lastly, Conferenceware allowed me to hone my skills using project management software.  Tickets, version control integration, and issue tracking are now second nature and really streamlined my workflow.  These are all skills that will contribute (hopefully!) to software project quality in my future.  Overall, the project was a successful one.  It has definitely enriched my education and taught me skills that will last for quite some time.
 \subsubsection{Brian Sawicki}
 Working on this project was very different than my previous software engineering experience.  While in my internships the previous two summers I have worked on teams of comparable size, this was my first time developing a serious application in an entirely windows environment, meaning there were a lot of technologies being used that I was unfamiliar with.  I came in with only minor web development experience, as much of my prior work is in distributed systems, and I'm several years removed from the experience I do have.  This was also only the second time I had ever developed anything using C\# as the primary language.  All this combined made working on this project a real learning experience for me, full of new and sometimes frustrating problems to solve.  Despite my internship experience had never had to do a lot of the things we needed to do for this project.  For instance, while I have written plenty of unit tests before, I had never been forced to write tests for anything using the MVC pattern before.  Thankfully many of the members of the team were quite knowledgeable and able to give me a hand with any technical problems I ran into.  In the end I feel it has been a very beneficial project to work on, and I have enjoyed watching as our final product took shape over time. In the end I don't feel like I will probably be doing a lot of windows based web development in the future, however having used the XP process while working on the project (in particular the documentation work we did and the use of the redmine reporting system for bugs/users stories/etc) will almost certainly be invaluable after I graduate and join the workforce.
 \subsubsection{Nick Tenczar}
