Comment on why we need [H] for figures

--- a/documentation/documentation.tex
+++ b/documentation/documentation.tex
@@ -132,6 +132,7 @@ and stores it in the database. The server then returns a sucess message
 to the user.
 
 %% Oh god, importing pdfs
+%% figure's [H] makes the figures show up RIGHT THERE, NO MATTER WHAT
 \section{Architecture and Design}
 \subsection{UML Sequence Diagrams}
 \begin{figure}[H]
